refactor: Dealer와 Players 타입 명시
- Participant로 반환하였지만 Dealer와 Player의 로직이 나뉘어져 있어 다형성을 활용하기보다 타입만 일치시킨 상태였으므로 타입을 분리하여 명시하는 것이 더 나은 선택이라고 판단하여 분리했습니다.

- Dealer와 Player의 타입을 분리하니 Participants 객체의 생성 이유를 찾지 못했습니다. 요구사항 중 인스턴스 변수 3개를 충족하지 못했지만 GameManager에서 Dealer와 Players를 관리하고 게임을 진행하도록 변경했습니다.